<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/signGoogle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="460dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/round_corner_btn"
        android:backgroundTint="@color/light_gray_figma"
        android:clipToOutline="true"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:padding="4dp"
            android:src="@drawable/ic_google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/imageGoogle"
            android:gravity="center"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="119dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="LOOKOUT"
        android:textColor="#5D57FF"
        android:textSize="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="79dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="344dp"
        android:gravity="center"
        android:text="@string/verify_hint"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/credentials"
        android:layout_width="280dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/login_inf"
        android:textColor="@color/medium_dark_gray_figma"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>